--- a/caen/index.html
+++ b/caen/index.html
@@ -1,19 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Caen</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blob + logo Caen</title>
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="https://caen.fr/themes/custom/createur/dist/images/icon/favicon-32x32.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/src/style.css">
 </head>
 
 <body>
-  <div id="app">
-    <svg id="blob-container" class="wrapper" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+
+  <div class="scene">
+
+    <img src="/photos-bg.png" alt="Background" class="layer bg-layer">
+
+    <svg id="blob-container" class="layer blob-layer" viewBox="0 0 1500 350" preserveAspectRatio="xMidYMid slice"
+      xmlns="http://www.w3.org/2000/svg">
     </svg>
 
+    <img src="/logo.png" alt="Logo" class="layer logo-layer">
+
   </div>
+  <p>Cliquez pour ajouter des blobs</p>
+
   <script type="module" src="/src/main.js"></script>
 </body>
 
